[package]
name = "cce"
version = "0.1.0"
authors = ["Ethan Smith <ethan@ethanhs.me>"]
description = "commandline compiler explorer - use https://godbolt.org from your terminal!"
homepage = "https://github.com/ethanhs/cce"
repository = "https://github.com/ethanhs/cce"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
dirs = "1.0"
reqwest = "0.9"
hyper = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap="2.31"
urlparse = "0.7"
open = "1.2.2"

[profile.release]
lto = true
